# util-scripts-py

./: pyproject.toml
src/util_scripts_py/: __init__.py  main.py
