[project]
name = "util-scripts-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kosuke222naito", email = "kosuke.naito.engineer@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
util-scripts-py = "util_scripts_py:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.7.4",
]
